# private-decision-tree-evaluation

./: .gitignore  LICENSE  README-internal.md  README.md  requirements.txt
experiments/: commons.py  experiment.py  experiment.yaml  experiment_datasets.py  experiment_datasets_sortinghats.py  experiment_datasets_xcmp.py  experiment_synthetic.py  generate_random_tree.py  generate_trees.py  prepare_data.sh  run_all_experiments.py  train.py  visualization.py  visualization_cmp.py  visualization_synthetic.py
src/: CMakeLists.txt  client.cpp  client.h  cmp_bench.cpp  parser.cpp  parser.h  pdte.cpp  server.cpp  server.h  tree_utils.cpp  tree_utils.h  utils.cpp  utils.h
src2/: CMakeLists.txt  client.cpp  client.h  main.cpp  parser.cpp  parser.h  server.cpp  server.h  utils.cpp  utils.h
